[package]
name = "game_engine"
version = "0.1.0"
edition = "2018"

[dependencies]
wasm-bindgen = "0.2.78"
js-sys = "0.3.55"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
[dependencies.web-sys]
version = "0.3.55"
features = ["Window", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d", "KeyboardEvent"]