[package]
name = "game_engine"
version = "0.1.0"
edition = "2018"

[dependencies]
js-sys = "0.3.55"
rand = "0.8.4"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
[dependencies.web-sys]
version = "0.3.55"
features = ["Window", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d", "KeyboardEvent"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dependencies.wasm-bindgen]
version = "0.2.78"
features = ["std"]